# kosync-rs

./: .gitignore  README.md  flake.nix
.github/workflows/: nix.yml
plugin/kosync-ext.koplugin/: KOSyncExtClient.lua  _meta.lua  api.json  main.lua
server/: Cargo.toml
server/src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
server/tests/: api_tests.rs
