[package]
name = "kosync-server"
version = "0.1.0"
edition = "2021"
description = "KOReader sync server with extended annotation support"
license = "AGPL-3.0"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redb = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md5 = "0.7"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
axum-test = "18"
tempfile = "3"
